# MusaCAD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-windows.yml
assets/branding/: README.md  branding.qrc  musacad.desktop  musacad.rc  regen_icons.sh
assets/ribbon/: ribbon.qrc
cmake/: CompilerWarnings.cmake  EmbedShaders.cmake  Sanitizers.cmake  embed_shaders_script.cmake
docs/: ARCHITECTURE.md  AUTOCAD_CONFIG.md  BUILD.md  COMMANDS.md  RELEASING.md  THIRD_PARTY_LICENSES.md  TODO.md
docs/release-notes/: v0.1.0.md
include/musacad/command/: command.hpp  command_context.hpp  command_module.hpp  command_processor.hpp  command_registry.hpp  commands.hpp  coordinate.hpp  dyn_fields.hpp
include/musacad/core/: block_resolve.hpp  command.hpp  dimension.hpp  entity_bounds.hpp  entity_handle.hpp  font_engine.hpp  generational_arena.hpp  geometry_engine.hpp  geometry_kernel.hpp  geometry_store.hpp  grips.hpp  hatch.hpp  hatch_pattern.hpp  linetype.hpp  mtext_block.hpp  native_kernel_2d.hpp  osnap.hpp  page_setup.hpp  properties.hpp  properties_palette.hpp  properties_registry.hpp  render_snapshot.hpp  scene_snapshot.hpp  snap.hpp  spatial_grid.hpp  version.hpp
include/musacad/core/io/: document.hpp  dxf.hpp  io_result.hpp  native_format.hpp
include/musacad/core/math/: mat3.hpp  mat4.hpp  math.hpp  vec2.hpp  vec3.hpp
include/musacad/core/text/: mtext.hpp  stroke_font.hpp  text_codes.hpp
include/musacad/core/threading/: mpsc_queue.hpp  triple_buffer.hpp
include/musacad/render/: camera.hpp  frame_stats.hpp  gl_backend.hpp  grid.hpp  overlay.hpp  render_module.hpp  render_theme.hpp  stroke_font.hpp  viewport_renderer.hpp
include/musacad/render/gpu/: buffer.hpp  command_buffer.hpp  device.hpp  gpu_types.hpp  pipeline.hpp  swapchain.hpp
include/musacad/ui/: command_icons.hpp  command_line_widget.hpp  dwg_converter.hpp  dyn_field_tips.hpp  dyn_input.hpp  layer_dialog.hpp  main_window.hpp  parameter_dialog.hpp  plot.hpp  plot_dialog.hpp  properties_panel.hpp  qt_font_engine.hpp  ribbon_bar.hpp  theme.hpp  viewport_modes.hpp  viewport_window.hpp
packaging/flatpak/: BUILD_FLATPAK.md  build_flatpak.sh  com.musacad.MusaCAD.metainfo.xml  com.musacad.MusaCAD.yml
packaging/linux/: BUILD_APPIMAGE.md  build_appimage.sh
packaging/windows/: musacad.nsi
scripts/: release.sh
shaders/: fill.vert  line.vert  point.frag  point.vert  thickline.frag  thickline.vert
src/app/: CMakeLists.txt  main.cpp
src/command/: CMakeLists.txt  command_module.cpp  command_processor.cpp  command_registry.cpp  commands.cpp  coordinate.cpp  dyn_fields.cpp
src/core/: CMakeLists.txt  block_resolve.cpp  dimension.cpp  entity_bounds.cpp  geometry_engine.cpp  geometry_store.cpp  grips.cpp  hatch.cpp  hatch_pattern.cpp  linetype.cpp  native_kernel_2d.cpp  osnap.cpp  properties_registry.cpp  scene_snapshot.cpp  spatial_grid.cpp  version.cpp
src/core/io/: document.cpp  dxf.cpp  native_format.cpp
src/core/text/: mtext.cpp  stroke_font.cpp  text_codes.cpp
src/render/: CMakeLists.txt  camera.cpp  frame_stats.cpp  gl_backend.cpp  grid.cpp  render_module.cpp  stroke_font.cpp  viewport_renderer.cpp
src/render/gl/: gl_common.hpp  gl_objects.cpp  gl_objects.hpp
src/ui/: CMakeLists.txt  command_icons.cpp  command_line_widget.cpp  dwg_converter.cpp  dyn_field_tips.cpp  dyn_input.cpp  layer_dialog.cpp  main_window.cpp  parameter_dialog.cpp  plot.cpp  plot_dialog.cpp  properties_panel.cpp  qt_font_engine.cpp  ribbon_bar.cpp  theme.cpp  viewport_window.cpp
tests/: CMakeLists.txt  bench_insert.cpp  command_demo.cpp  header_scan.cmake  render_offscreen.cpp  test_adaptive_tess.cpp  test_annotation_persistence.cpp  test_blocks.cpp  test_bulge.cpp  test_camera.cpp  test_command_processor.cpp  test_command_roundtrip.cpp  test_command_suggest.cpp  test_coordinate.cpp  test_delete_selection.cpp  test_dimension.cpp  test_dxf.cpp  test_dyn_fields.cpp  test_erase_pick.cpp  test_fonts.cpp  test_frame_stats.cpp  test_geometry_engine.cpp  test_geometry_store.cpp  test_grid.cpp  test_grips.cpp  test_handles.cpp  test_hatch.cpp  test_header_hygiene.cpp  test_hover.cpp  test_kernel.cpp  test_kernel_intersect.cpp  test_kernel_offset.cpp  test_layer_persistence.cpp  test_layer_render.cpp  test_layers.cpp  test_linetype.cpp  test_lineweight.cpp  test_math.cpp  test_modify.cpp  test_modify_commands.cpp  (+20 more)
tools/: lsan.supp  plot_check.cpp  svg2png.cpp
